--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
     </style>
 </head>
 <body>
+    <h1>This is a new feature</h1>
     <button class="btn">
         Local Repo
     </button>
+
     
 </body>
 </html>
